--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AZMwS07vvHxgB7a6AmO8on_GPeLQRDG9N-leg1kd-QEg-pzvrsIBUk9T8TZA0r6IxeUqaIIXWkH6uoHb&currency=USD"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
