--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" sizes="180x180" href="%PUBLIC_URL%/apple-logo.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image-1200x630.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Save up to 50%"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-logo.png" />
     <script src="https://www.paypal.com/sdk/js?client-id=AZMwS07vvHxgB7a6AmO8on_GPeLQRDG9N-leg1kd-QEg-pzvrsIBUk9T8TZA0r6IxeUqaIIXWkH6uoHb&currency=USD"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
