--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta property="og:image" content="%PUBLIC_URL%/og-image-1200x630.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="noindex, nofollow">
+
     <meta
       name="description"
       content="Save up to 50%"
